file per collection fixes swagger api not working
